--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@ select:hover {
 
     <!-- 3rd Question -->
     <div id="question3" style="display:none; margin-top:30px;">
-        <label>Aap mere sath physical<br>
-                    hone ke liye taiyar hai?</label>
+        <label>Kya aap mujhse pyar karti ho?</label>
         <select id="physical" onchange="showReaction('3')">
             <option value="" disabled selected>Select</option>
             <option value="yes">YES</option>
@@ -288,5 +287,6 @@ function triggerEmoji(symbol) {
 
 </body>
 </html>
+
 
 
